Gh pages update new feature
Move PR from NFLabs/zeppelin#393

Author: Mina Lee <minalee@nflabs.com>

Closes #14 from minahlee/gh-pages_update_new_feature and squashes the following commits:

5828416 [Mina Lee] Correct function name
da8fd40 [Mina Lee] Add python suport
ba213f2 [Mina Lee] Add pivot feature on main page
1918a90 [Mina Lee] Update tutorial for spark 1.3.0